# l2d_girlfriend_tts

./: AudioHandler.cpp  AudioHandler.h  CMakeLists.txt  CMakeLists1.txt  README.md  resources.qrc  start_ollama.bat  test.py
Framework/: CMakeLists.txt
Framework/src/: CubismModelSettingJson.cpp  CubismModelSettingJson.hpp  ICubismModelSetting.hpp
include/: main_window.h
include/Live2dApp/: LAppDelegate.hpp  LAppLive2DManager.hpp  LAppView.hpp  message_queue.hpp
include/api/: ollama_api.h  sence_voice_webserver_api.h  tts_api.h
include/pages/: T_AnimationBubble.h  T_Chat.h  T_ChatBubble.h  T_Home.h  T_Ollama_Setting.h  T_Setting.h  T_TTS_Setting.h  T_TransparentChatScrollArea.h  T_live2d.h  glwidget.h
include/pages/Live2dApp/: LAppDelegate.hpp  LAppLive2DManager.hpp  LAppModel.hpp  event_handler.hpp
include/small_widgets/: dialog_input_edit.h  hover_button.h  smoothscrollarea.h  smoothscrollbar.h
include/tools/: AudioInputDevices.h  AudioOutputDevices.h  app_config.h  app_log.h  chara_resource_loader.h  history_storage.h  http_tools.h  media_manager.h  resource_loader.h
resources/character/: config.json
resources/character/Hiyori/: .model3.json
resources/character/LSS/: .model3.json  LSS.model3.json
resources/character/aersasi_2/: aersasi_2.model3.json
resources/character/baerdimo_5/: baerdimo_5.model3.json
resources/character/xuefeng/: xuefeng.model3.json
resources/character/【碧蓝航线】岛风 不思议国度的白兔/: 【碧蓝航线】岛风 不思议国度的白兔.model3.json
resources/character/【碧蓝航线】岛风 不思议国度的白兔/motions/: FileReferences_Pose_0.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_Idle#1_0.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_Leave20_60_240_0.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_Leave20_60_240_1.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_Leave20_60_240_2.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_Start_0.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_Start_1.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_任务_0.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_任务_1.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_任务_3.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_任务_4.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_好感度_0.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_好感度_5.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_触摸_0.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_触摸_3.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_触摸_4.motion3.json  【碧蓝航线】岛风 不思议国度的白兔_鼠标追踪_0.motion3.json
src/: main.cpp  main_window.cpp
src/Live2dApp/: LAppDefine.cpp  LAppLive2DManager.cpp  LAppModel.cpp  LAppView.cpp  event_handler.cpp
src/api/: ollama_api.cpp  sence_voice_webserver_api.cpp  tts_api.cpp
src/pages/: T_AnimationBubble.cpp  T_Chat.cpp  T_ChatBubble.cpp  T_Home.cpp  T_Ollama_Setting.cpp  T_Setting.cpp  T_TTS_Setting.cpp  T_TransparentChatScrollArea.cpp  T_live2d.cpp  glwidget.cpp
src/pages/Live2dApp/: LAppDelegate.cpp  LAppLive2DManager.cpp  LAppModel.cpp  event_handler.cpp  message_queue.cpp  resource_loader.cpp
src/pages/back/: resource_loader.cpp
src/small_widgets/: dialog_input_edit.cpp  hover_button.cpp  smoothscrollarea.cpp  smoothscrollbar.cpp
src/tools/: AudioInputDevices.cpp  AudioOutputDevices.cpp  app_config.cpp  media_manager.cpp  resource_loader.cpp
